--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <!-- === Acknowledgement Section Starts === -->
   <div class="section">Acknowledgement</div>
   <div class="acknowledgement">
-    These works are jointly done by ByteDance AI Lab
+    Some works are jointly done by ByteDance AI Lab
     and relevant research institutions
     (Tsinghua University,
     The University of Adelaide,
