--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Open World Robot Perception, Manipulation and Learning</title>
+  <title>Open Robot Projects on Perception, Manipulation and Learning</title>
 
   <link href="./assets/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/font.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
   <!-- === Header Starts === -->
   <div class="header">
     <div class="title">
-      Open World Robot Perception, Manipulation and Learning
+      Open Robot Projects on Perception, Manipulation and Learning
     </div>
 <!--    <div class="subtitle">-->
 <!--      ByteDance Robotics Research-->
